Fix filters layout on mobile

--- a/src/scss/filters.scss
+++ b/src/scss/filters.scss
@@ -28,15 +28,16 @@
   }
 
   &__title--wrapper {
+    width: 100%;
     display: flex;
     justify-content: center;
+    margin-bottom: 2rem;
   }
 
   &__name {
     &--wrapper {
       display: flex;
       justify-content: center;
-      margin: 3rem 0;
       flex-flow: row wrap;
       width: 80%;
     }
@@ -64,6 +65,7 @@
       margin: 1rem 0;
       flex-flow: row wrap;
       width: 80%;
+      margin-top: 4rem;
     }
 
     &__title--wrapper {
@@ -86,7 +88,8 @@
 .created-by--wrapper {
   position: absolute;
   bottom: 0;
-  padding-bottom: 0.5rem;
+  padding: 1rem 0;
+  margin-top: 1rem;
 
   .created-by {
     font-size: 1.3rem;
@@ -101,9 +104,9 @@
 }
 
 .react-autosuggest__input {
+  width: calc(100% - 1rem);
   height: 30px;
-  padding: 1rem 2rem 1rem 0;
-  padding-left: 1rem;
+  padding: 1rem 0 1rem 1rem;
   font-weight: 500;
   font-size: 16px;
   font-family: "Montserrat", sans-serif;
